kind/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: ivolve
spec:
  selector:
    app: cloudapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
  type: ClusterIP
